[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mobile-actions-env"
version = "1.0.0"
description = "OpenEnv environment for LLM tool-calling on mobile (calendar, maps, email, media)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "httpx>=0.27",
    "openai>=1.30",
    "pyyaml>=6.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest>=8", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["graders*"]
